Add style design to page

--- a/styles.css
+++ b/styles.css
@@ -3,12 +3,21 @@ section {
 }
 
 body {
-    font-family: monospace;
-    font-size: 15px;
+    font-family: Helvetica;
+    font-size: 12pt;
+    margin: 20px;
+    background-image: url("./images/pexels-shonejai-445753-1227511.jpg ");
+    padding: 10px 10%;
+}
+
+main {
+    background-color: #eeeeee;
+    padding: 0.5em 2em;
 }
 
 table, td, th {
     border: solid black 1px;
+    margin-bottom: 1em;
 }
 
 table {
@@ -29,6 +38,15 @@ a:hover {
     text-decoration: underline;
 }
 
+h1 {
+    font-size: 30pt;
+    text-decoration: underline;
+    font-style: italic;
+    background-image: linear-gradient(to right, yellow, red);
+}
+
+
+
 #poem {
     text-align: center;
 }
@@ -47,4 +65,13 @@ a:hover {
 
 .pink {
     background-color: pink;
+}
+
+#essay > p {        /* Indent */
+    text-indent: 3em;  
+    margin-top: 1em;
+}
+
+#schedule {
+    border: none;
 }
