--- a/styles.css
+++ b/styles.css
@@ -6,13 +6,28 @@ body {
     font-family: Helvetica;
     font-size: 12pt;
     margin: 20px;
-    background-image: url("./images/pexels-shonejai-445753-1227511.jpg ");
+    background-image: url("./images/background.jpg ");
     padding: 10px 10%;
+    background-attachment: fixed;
 }
 
 main {
-    background-color: #eeeeee;
+    background-color: #eeeeff;
     padding: 0.5em 2em;
+    border: solid black 5px;
+    max-width: 773px;
+    margin: auto;
+}
+
+.my-picture {
+    width: 350px;
+    border: 0.7em groove black;
+    box-shadow: 15px 15px;
+    border-radius: 50px;
+}
+
+#personal-info  li, #books li {
+    margin-top: 0.7em;
 }
 
 table, td, th {
@@ -21,13 +36,26 @@ table, td, th {
 }
 
 table {
-    border-spacing: 3px;
+    border-collapse: collapse;
+    border-spacing: 0px;
+    table-layout: fixed;
 }
 
 td, th {
     padding: 3px;
     text-align: center;
     width: 8em;
+}
+
+th {
+    background-color: #666666;
+    color: #eeeeee;
+    text-align: left;
+}
+
+h1, h2 {
+    margin-top: 0.75em;
+    margin-bottom: 0.25em;
 }
 
 a {
@@ -43,9 +71,10 @@ h1 {
     text-decoration: underline;
     font-style: italic;
     background-image: linear-gradient(to right, yellow, red);
+    padding: 0.5rem;
+    border: solid black;
+    border-radius: 25px;
 }
-
-
 
 #poem {
     text-align: center;
@@ -53,10 +82,12 @@ h1 {
 
 .blue {
     background-color: blue;
+    color: white;
 }
 
 .red {
     background-color: red;
+    color: white;
 }
 
 .yellow {
@@ -67,11 +98,19 @@ h1 {
     background-color: pink;
 }
 
-#essay > p {        /* Indent */
+#schedule {
+    border: none;
+}
+
+.indent {
     text-indent: 3em;  
     margin-top: 1em;
 }
 
-#schedule {
-    border: none;
+.float-right {
+    float: right;
+}
+
+tr:nth-of-type(odd) {
+    background-color: #bbbbbb;
 }
